--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -263,7 +263,7 @@ en:
   footer:
     legal: Legal
     privpolicy: Privacy Policy
-    powered_by: Powered by %{href}.
+    powered_by: Powered by Eorgs Innofinity and Inevitable Tech .
   forgot_password:
     subtitle: Forgot Password
     email: Email
@@ -293,8 +293,8 @@ en:
     search:
       start: Start searching...
   landing:
-    about: "%{href} is a simple front-end for your BigBlueButton open-source web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
-    welcome: Welcome to BigBlueButton.
+    about: "namclass is a simple front-end for web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
+    welcome: Welcome to Namclass .
     video: Watch our tutorial on using Greenlight
     upgrade: Show me how to upgrade to 2.0!
     version: We've released a new version of Greenlight, but your database isn't compatible.
